@@ -4789,6 +4789,13 @@ sub handle_tests
 		return $obj
 		  if $val =~ /^\@.*\@$/;
 		$obj =~ s/\$\(EXEEXT\)$//o;
+
+		if ($val =~ /(\$\((top_)?srcdir\))\//o)
+		  {
+		    msg ('error', $subvar->rdef ($cond)->location,
+			 "parallel-tests: using `$1' in TESTS is currently broken: `$val'");
+		  }
+
 		foreach my $test_suffix (@test_suffixes)
 		  {
 		    next
