@@ -486,6 +486,7 @@ parallel-tests4.test \
 parallel-tests5.test \
 parallel-tests6.test \
 parallel-tests7.test \
+parallel-tests8.test \
 parse.test \
 percent.test \
 percent2.test \
