@@ -1,5 +1,14 @@
 2009-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	parallel-tests: warn about $(srcdir), $(top_srcdir) in TESTS.
+	* automake.in (handle_tests): Warn about portability issue
+	concerning generated TESTS files listed with a `$(srcdir)/'
+	or `$(top_srcdir)/' prefix.
+	* doc/automake.texi (TESTS): Document this issue.  Mention that
+	the parallel-tests driver is still experimental.
+	* tests/parallel-tests8.test: New test.
+	* tests/Makefile.am: Update.
+
 	check-html: Always create HTML output, note conversion failure.
 	* lib/am/check.am (check-html): Create `$(TEST_SUITE_HTML)' in
 	any case.  Exit unsuccessfully if HTML creation failed.
